# oikos-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
deploy/k8s/: deployment.yaml  service.yaml
